# goit-algo2-hw-05

./: README.md  pyproject.toml  task_1.py  task_2.py
