[project]
name = "goit-algo2-hw-05"
version = "0.1.0"
description = ""
authors = [
    {name = "DmytroVasylenko6",email = "tredstoun651@ukr.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hyperloglog (>=0.0.14,<0.0.15)",
    "pandas (>=2.2.3,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "datasketch (>=1.6.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
